# graph-visualizer

./: CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cpp  main.cpp
include/core/: edge.h  graph.h  node.h
include/visualizer/: graph_editor.h  graph_manipulator_app.h  graph_view.h  graph_visualizer_app.h  shortest_path_algorithms.h
src/core/: edge.cpp  graph.cpp  node.cpp
src/visualizer/: graph_editor.cpp  graph_manipulator_app.cpp  graph_view.cpp  graph_visualizer_app.cpp  shortest_path_algorithms.cpp
tests/: edge_test.cpp  graph_editor_test.cpp  graph_test.cpp  graph_view_test.cpp  node_test.cpp  shortest_path_test.cpp
